--- a/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
+++ b/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
@@ -472,7 +472,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Многоуровневый Маркет мейкинг](./data/DeviationLKOHSIBN.jpg \"Многоуровневый Маркет мейкинг\")"
+    "![Многоуровневый Маркет мейкинг](./data/DeviationLKOHSIBN.jpg \"Многоуровневый Маркет мейкинг\")\n",
+    "![Многоуровневый Маркет мейкинг](DeviationLKOHSIBN.jpg \"Многоуровневый Маркет мейкинг\")"
    ]
   },
   {
