--- a/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
+++ b/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
@@ -254,10 +254,6 @@
     "    αiI — коэффициент смещения (Альфа-коэффициент);\n",
     "    εiI — случайная погрешность. \n",
     "\n",
-    "    Картинка из статьи про Бета-нейтральный портфель\n",
-    "![коэффициент наклона][photo121]\n",
-    "[photo121]: https://upload.wikimedia.org/wikipedia/commons/7/74/MarketModelSharp.jpg \"коэффициент наклона\"\n",
-    "\n",
     "Бета-коэффициент можно вычислить через МНК или еще проще через корреляцию.\n",
     "\n",
     "Все что нужно для вычисления:\n",
@@ -265,6 +261,15 @@
     "    \n",
     "   $\\mathrm{Cov}$ — ковариация оцениваемой и эталонной величины, \n",
     "   $\\mathrm{Var}$ — дисперсия эталонной величины.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    Картинка из статьи про Бета-нейтральный портфель\n",
+    "![коэффициент наклона][photo121]\n",
+    "[photo121]: https://upload.wikimedia.org/wikipedia/commons/7/74/MarketModelSharp.jpg \"коэффициент наклона\""
    ]
   },
   {
@@ -473,7 +478,7 @@
    "metadata": {},
    "source": [
     "![Многоуровневый Маркет мейкинг](./data/DeviationLKOHSIBN.jpg \"Многоуровневый Маркет мейкинг\")\n",
-    "![Многоуровневый Маркет мейкинг](DeviationLKOHSIBN.jpg \"Многоуровневый Маркет мейкинг\")"
+    "![Многоуровневый Маркет мейкинг](DeviationLKOHSIBN2.jpg \"Многоуровневый Маркет мейкинг\")"
    ]
   },
   {
@@ -481,16 +486,20 @@
    "metadata": {},
    "source": [
     "    Пример из картинки можно описать таблицей например вот так:\n",
-    "Номер (наименование) Уровня  |Значение ниже|Действие если Предыдущий уровень выше|Значение выше|Действие если Предыдущий уровень ниже\n",
-    "---------|:-------|:\n",
-    "Уровень+3|_ |_      | 6|Продажа S3\n",
-    "Уровень+2| 4|Покупка S3 Закрытие| 4|Продажа S2\n",
-    "Уровень+1| 2|Покупка S2 Закрытие| 2|Продажа S1\n",
-    "Уровень 0| 0|Покупка S1 Закрытие| 0|Продажа B1 Закрытие\n",
-    "Уровень-1|-2|Покупка B1|-2|Продажа B2 Закрытие\n",
-    "Уровень-2|-4|Покупка B2|-4|Продажа B3 Закрытие\n",
-    "Уровень-3|-6|Покупка B3|\n",
-    "    где \n",
+    " \t---------------------------------------------------------------------------------- \t\n",
+    "    |         |              | Действие если       |             | Действие если \n",
+    "    |         | Значение     | Предыдущий уровень  | Значение    | Предыдущий уровень   \n",
+    "    |Уровнь   | ниже         | выше                | выше        | ниже\n",
+    "    ----------------------------------------------------------------------------------\n",
+    "    Уровень+3    -             -                      6             Продажа S3\n",
+    "    Уровень+2    4             Покупка S3 Закрытие    4             Продажа S2\n",
+    "    Уровень+1    2             Покупка S2 Закрытие    2             Продажа S1\n",
+    "    Уровень 0    0             Покупка S1 Закрытие    0             Продажа B1 Закрытие\n",
+    "    Уровень-1   -2             Покупка B1            -2             Продажа B2 Закрытие\n",
+    "    Уровень-2   -4             Покупка B2            -4             Продажа B3 Закрытие\n",
+    "    Уровень-3   -6             Покупка B3            -              -\n",
+    "\n",
+    "где \n",
     "    B1 B2 B3 - количество спредов на покупку на соответсвующем уровне\n",
     "    S1 S2 S3 - количество спредов на продажу на соответсвующем уровне\n",
     "    Наименование уровня отражает направление отлонения спреда от средней.\n",
