--- a/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
+++ b/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
@@ -35,44 +35,44 @@
    "metadata": {},
    "source": [
     "###1. Вычисление спреда.\n",
-    "На входе цены двух коррелированных ценных бумаг:\n",
+    "На входе цены двух коррелированных ценных бумаг А и В:\n",
     "    \n",
-    "    А и В\n",
+    "    Pa и Pb\n",
     "\n",
     "####Спред - как отношение цен двух коррелированных ценных бумаг:\n",
     "\n",
-    "    St = Ka*At/Kb*Bt\n",
+    "    St = Qa*Pat/Qb*Pbt\n",
     "    \n",
     "Часто говорят про торговлю отношением, насколько я понял, Спред как отношение используется только для принятия решения, фактически при совершении сделки на покупку или продажу спреда имеем разность от покупки и продажи бумаг.\n",
     "\n",
     "####Спред - как разность цен двух коррелированных ценных бумаг:\n",
     "\n",
-    "    St = Ka*At - Kb*Bt\n",
+    "    St = Qa*Pat - Qb*Pbt\n",
     "\n",
     "где\n",
     "\n",
-    "    Ka - количество ценных бумаг А\n",
-    "    Kb - количество ценных бумаг B   \n",
-    "    At - цена бумаг А    \n",
-    "    Bt - цена бумаг B    \n",
+    "    Qa - количество ценных бумаг А\n",
+    "    Qb - количество ценных бумаг B   \n",
+    "    Pat - цена бумаг А    \n",
+    "    Pbt - цена бумаг B    \n",
     "         в момент времени t\n",
     "         \n",
     "Продажа Сперда (-St) это:\n",
     "    \n",
-    "    -St = -Ka*At + Kb*Bt\n",
+    "    -St = -Qa*Pat + Qb*Pbt\n",
     "    т.е. продажа A и покупка B\n",
     "    \n",
     "Покупка Сперда (+St) это:\n",
     "    \n",
-    "    +St = +Ka*At - Kb*Bt\n",
+    "    +St = +Qa*Pat - Qb*Pbt\n",
     "    т.е. покупка A и продажа B\n",
     "    \n",
     "Варианты определения цены для вычисления спреда.\n",
-    "Цены At и Bt могут браться как цены последней сделки в момент t, или как лучшие цены заявок в стакане.\n",
+    "Цены Pat и Pbt могут браться как цены последней сделки в момент t, или как лучшие цены заявок в стакане.\n",
     "\n",
-    "В общем случае значения Ka Kb также могут зависеть от в момента времени t (напремер с течение времени может меняться среднее отношение A/B из за фундаментальных факторов).\n",
+    "В общем случае значения Qa Qb также могут зависеть от в момента времени t (напремер с течение времени может меняться среднее отношение A/B из за фундаментальных факторов).\n",
     "\n",
-    "    St = Kat*At - Kbt*Bt   \n",
+    "    St = Qat*Pat - Qbt*Pbt   \n",
     "\n",
     "Изменение значения Спреда S с течение времени t не зависит от изменения (движения) рынка (или зависит в значтельно меньшей степени).\n",
     "   \n",
@@ -80,7 +80,7 @@
     "    Средние значения цен\n",
     "    A = 100\n",
     "    B = 90\n",
-    "    при торговле 1 лотом каждой из бумаг, т.е. Kat = Kbt = 1    \n",
+    "    при торговле 1 лотом каждой из бумаг, т.е. Qat = Qbt = 1    \n",
     "    S = 100 - 90 = 10\n",
     "    Спред практически не зависит от движения рынка\n",
     "\n",
@@ -92,7 +92,7 @@
     "    S = 1000 - 90 = 910\n",
     "    Спред фактически зависит от движения рынка на 90%. Такой спред мало пригоден и фактически не отличается от направленной торговли одним инструментом.\n",
     "    \n",
-    "Как раз от выбора Kat, Kbt и зависит насколько Спред независим от движения рынка. Далее рассмотрим способы вычисления Kat и Kbt."
+    "Как раз от выбора Qat, Qbt и зависит насколько Спред независим от движения рынка. Далее рассмотрим способы вычисления Qat и Qbt."
    ]
   },
   {
@@ -102,9 +102,9 @@
     "####1.1 Денежно нейтральный портфель\n",
     "Часто стремятся чтобы сред был около нуля.\n",
     "    \n",
-    "    St = Kat*At - Kbt*Bt = 0\n",
+    "    St = Qat*Pat - Qbt*Pbt = 0\n",
     "    \n",
-    "Как раз для этого случая вычисляют отношение At/Bt.\n",
+    "Как раз для этого случая вычисляют отношение Pat/Pbt.\n",
     "\n",
     "    Пример 1.1.1\n",
     "    Средние значения цен\n",
@@ -113,24 +113,24 @@
     "    A/B = 100/90 = 1.11 = Ka/b\n",
     "\n",
     "    тогда \n",
-    "        Kat = 1\n",
-    "        Kbt = Ka/b = A/B\n",
+    "        Qat = 1\n",
+    "        Qbt = Ka/b = A/B\n",
     "        или \n",
-    "        Kat = Kb/a = B/A\n",
-    "        Kbt = 1\n",
+    "        Qat = Kb/a = B/A\n",
+    "        Qbt = 1\n",
     "        \n",
     "        тогда формула спреда на основе текущего отношения\n",
-    "            St =    1*At - Ka/b*Bt\n",
-    "            St = Kb/a*At -    1*Bt            \n",
+    "            St =    1*Pat - Ka/b*Pbt\n",
+    "            St = Kb/a*Pat -    1*Pbt            \n",
     "\n",
-    "    St = 1*At - 1.1*Bt\n",
+    "    St = 1*Pat - 1.1*Pbt\n",
     "\n",
     "    Торговли дробными лотами нет, поэтому если хотят максимально уравновесит открытую позицию по деньгам, могут применить множитель для количества лотов например кратный 10.\n",
     "    \n",
-    "    Kat = 1*10\n",
-    "    Kbt = A/B*10 = 1.1*10 = 11\n",
+    "    Qat = 1*10\n",
+    "    Qbt = A/B*10 = 1.1*10 = 11\n",
     "    \n",
-    "    St = 10*At - 11*Bt\n",
+    "    St = 10*Pat - 11*Pbt\n",
     "    S = 10*100 - 11*90 = 1000 - 990 = 10\n",
     "    \n",
     "    Спред фактически не зависит от движения рынка. При это абсолютное значение спреда осталось прежним = 10 как и в примере 1, но открываема позиция стала в 10 раз более денежно нейтральная по отношению к рынку, чем при торговле 1 лотом каждой из бумаг.\n",
@@ -141,21 +141,21 @@
     "    B = 90\n",
     "    A/B = 1000/90 = 11.11 = Ka/b\n",
     "\n",
-    "            St =    1*At - Ka/b*Bt\n",
-    "            St = Kb/a*At -    1*Bt            \n",
+    "            St =    1*Pat - Ka/b*Pbt\n",
+    "            St = Kb/a*Pat -    1*Pbt            \n",
     "    тогда\n",
-    "    St = 1*At - 11.11*Bt\n",
+    "    St = 1*Pat - 11.11*Pbt\n",
     "    S  = 1*1000 - 11*90 = 1000 - 990 = 10    \n",
     "    \n",
     "    или \n",
-    "    St = 0,09*At - 1*Bt    \n",
+    "    St = 0,09*Pat - 1*Pbt    \n",
     "    \n",
     "    с множителем 10 (вариант получается менее точным чем предыдущий)\n",
-    "    St = 0,9*At - 10*Bt    \n",
+    "    St = 0,9*Pat - 10*Pbt    \n",
     "    S  = 1*1000 - 10*90 = 1000 - 900 = 100\n",
     "    \n",
     "    или с множителем 100\n",
-    "    St = 9*At - 100*Bt  \n",
+    "    St = 9*Pat - 100*Pbt  \n",
     "    S  = 9*1000 - 100*90 = 9000 - 9000 = 0\n",
     "\n",
     "Денежно нейтральный спред хорошо подходит для фьючерсов на евро и доллар.\n",
@@ -168,11 +168,11 @@
     " \t \t\n",
     "    Отношение Eu/Si ~> Ed\n",
     "    \n",
-    "            St =  Kat*At -  Kbt*Bt\n",
-    "            St =    1*At - Ka/b*Bt\n",
-    "            St = Kb/a*At -    1*Bt            \n",
-    "    At = Eu\n",
-    "    Bt = Si\n",
+    "            St =  Qat*Pat -  Qbt*Pbt\n",
+    "            St =    1*Pat - Ka/b*Pbt\n",
+    "            St = Kb/a*Pat -    1*Pbt            \n",
+    "    Pat = Eu\n",
+    "    Pbt = Si\n",
     "    Ked = Ed (~ Eu/Si)\n",
     "    Ka/b = Ked = Ed\n",
     "    Kb/a = 1/Ked = 1/Ed    \n",
@@ -207,9 +207,9 @@
     "Денежно нейтральный спред не всегда рыночно нейтральный. Т.е. две бумаги могут быть сильно коррелированы, иметь в определенный момент времены близкие абсолютные значения цен, но при этом быть сильно разными по волатильности (по скорости изменения цен), т.е. сильно отличаться по реакции на внешние факторы.\n",
     "В этом случае для построения спреда применяют Бета-нейтральный подход.\n",
     "\n",
-    "    St = Kat*At - Kbt*Bt\n",
+    "    St = Qat*Pat - Qbt*Pbt\n",
     "\n",
-    "Требуется вычислить параметры (коэффициенты) спреда Kat и Kbt, через Бета-коэффициенты $\\beta_a$ и $\\beta_b$.\n",
+    "Требуется вычислить параметры (коэффициенты) спреда Qat и Qbt, через Бета-коэффициенты $\\beta_a$ и $\\beta_b$.\n",
     "\n",
     "Для этого доходность каждой из частей спреда сравнивают с доходностью рынка (или базового портфеля).    \n",
     "\n",
@@ -277,13 +277,13 @@
    "metadata": {},
    "source": [
     "####1.2.2 Вычисление коэффициенов спреда для Бета-нейтрального парного трейдинга\n",
-    "Теперь, когда у нас известны Бета-коэффициенты $\\beta_a$ и $\\beta_b$ для каждой из бумаг спреда, необходимо вычислить параметры (коэффициенты) спреда Kat и Kbt.\n",
+    "Теперь, когда у нас известны Бета-коэффициенты $\\beta_a$ и $\\beta_b$ для каждой из бумаг спреда, необходимо вычислить параметры (коэффициенты) спреда Qat и Qbt.\n",
     "    \n",
-    "    St = Kat*At - Kbt*Bt\n",
+    "    St = Qat*Pat - Qbt*Pbt\n",
     "    где\n",
     "\n",
-    "    Kat - количество ценных бумаг А\n",
-    "    Kbt - количество ценных бумаг B   \n",
+    "    Qat - количество ценных бумаг А\n",
+    "    Qbt - количество ценных бумаг B   \n",
     "    , взятые в соответсвующих Бета-нейтральных долях Xa и Xb.\n",
     "\n",
     "Зная Бета-коэффициенты βa и βb, можем определить долю X каждой из бумаг спреда в Бета-нейтрально портфеле:\n",
@@ -304,7 +304,7 @@
     "\n",
     "Значения Бета коэффициентов в каждый момент времени могут иметь разное значение, что также отразится на долевых коэффициентах, поэтому для каждого момента времени все коэффициенты пересчитываются.\n",
     "\n",
-    "Фактическое количество Kat Kbt будет браться в зависимости от выделенных на стратегию средств в соответсвующих долях Xa и Xb.\n",
+    "Фактическое количество Qat Qbt будет браться в зависимости от выделенных на стратегию средств в соответсвующих долях Xa и Xb.\n",
     "\n",
     "    Пример 1.1.2 (из википедии): \n",
     "    За 2009 год Бета-коэффициент акций «Лукойл» составил 1,01. \n",
@@ -316,13 +316,7 @@
     "\n",
     "\\begin{cases}\\mathrm{X}_\\mathrm{LKOH}=0,46\n",
     "\\quad\\mathrm{X}_\\mathrm{SIBN}=0,54\\end{cases}\n",
-    "\n",
-    "    тогда количество ценных бумаг в соответсвующих долях Xa и Xb:\n",
-    "                                                Kat = 46, Kbt = 54\n",
-    "    или\n",
-    "                                                Kat = 23, Kbt = 27\n",
-    "    и т.д. \n",
-    "   \n",
+    "  \n",
     "\"Ниже представлен график соотношения стоимости акций «Лукойл» и акций «Газпром нефть», рассчитанный по дневным ценам закрытия начиная с июня 2002 года, а также его 200-дневная скользящая средняя. Кроме того, на графике представлены исторические значения Беты и долевых коэффициентов каждой акции. Для расчета Бета-коэффициента на каждый момент времени использовались значения доходности двухсот предыдущих торговых дней.\"\n",
     "\n"
    ]
@@ -418,12 +412,12 @@
     "\n",
     "Продажа Сперда (-St) это:\n",
     "    \n",
-    "    -St = -Ka*At + Kb*Bt\n",
+    "    -St = -Qa*Pat + Qb*Pbt\n",
     "    т.е. продажа A и покупка B\n",
     "    \n",
     "Покупка Сперда (+St) это:\n",
     "    \n",
-    "    +St = +Ka*At - Kb*Bt\n",
+    "    +St = +Qa*Pat - Qb*Pbt\n",
     "    т.е. покупка A и продажа B\n",
     "\n",
     "#####В Парном трейдинге можно существенно снизить общий риск портфеля путем одновременной торговли по нескольким парам. В таком случае, даже если какие-то пары не оправдают ожиданий относительно возврата своих соотношений к среднему значению, другие пары, соотношение которых вернулось к средней величине, компенсируют полученный убыток.\n",
@@ -499,7 +493,8 @@
     "    Уровень-2   -4             Покупка B2            -4             Продажа B3 Закрытие\n",
     "    Уровень-3   -6             Покупка B3            -              -\n",
     "\n",
-    "где \n",
+    "\n",
+    "    где \n",
     "    B1 B2 B3 - количество спредов на покупку на соответсвующем уровне\n",
     "    S1 S2 S3 - количество спредов на продажу на соответсвующем уровне\n",
     "    Наименование уровня отражает направление отлонения спреда от средней.\n",
