--- a/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
+++ b/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
@@ -71,7 +71,10 @@
    "source": [
     "####1.1 Денежно нейтральный Спред\n",
     "На входе:    \n",
-    "\n",
+    "    \n",
+    "    Xa = Xb = 0,5\n",
+    "    Xa + Xb = 1\n",
+    "    \n",
     "    Известны соотношения:\n",
     "    Ka/b = Pa/Pb;     Kb/a = Pb/Pa\n",
     "    где Pa Pb средние на некотором интервале цены инструментов.\n",
@@ -79,35 +82,47 @@
     "Требуется определить количество Qat Qbt спреда St\n",
     "    \n",
     "    St = Qat*Pat - Qbt*Pbt -> 0\n",
-    "\n",
-    "#####Определение доли каждой из бумаг спреда:\n",
+    "           \n",
+    "#####Текущая доля базового и котируемого портфеля спреда\n",
     "    через соотношение Kb/a:\n",
-    "    { Xa + Xb = 1; Xa - Xb*Kb/a = 0; \n",
     "\n",
-    "    { Xb = 1 - Xa; Xa = Xb*Kb/a;  \n",
-    "    Xa = (1 - Xa)*Kb/a; Xa = Kb/a - Xa*Kb/a; Xa + Xa*Kb/a = Kb/a; Xa(1 + Kb/a) = Kb/a;\n",
-    "    => \n",
-    "    Xa = Kb/a/(1 + Kb/a);\n",
-    "    Xb = 1 - Kb/a/(1 + Kb/a)\n",
+    "    Xb + Xa = 1\n",
+    "    PS = Qb*PB / Xb\n",
+    "    PS = Qa*Pa / Xa\n",
+    "\n",
+    "    Xb = Qb*PB / (Qb*PB + Qa*Pa)\n",
+    "    Xa = Qa*Pa / (Qb*PB + Qa*Pa)    \n",
+    "\n",
+    "    Xb = Qb*PB / PS\n",
+    "    Xa = Qa*Pa / PS    \n",
+    "\n",
+    "    Xb = (Qb*PB/Qa*Pa) / (Qb*PB/Qa*Pa + Na*Pa/Na*Pa)\n",
+    "    Xb = (Qb*PB/Qa*Pa) / (Qb*PB/Qa*Pa + 1)        \n",
+    "\n",
+    "    Xb = Kb/a/(1 + Kb/a);\n",
+    "    Xa = 1 - Kb/q/(1 + Kb/q);\n",
+    "    Xa = 1 /(1 + Kb/a);  \n",
+    "    ------------------------------    \n",
+    "    { Xa + Xb = 1; Xb - Xa*Kb/a = 0; \n",
+    "    { Xb = 1 - Xa; 1 - Xa - Xa*Kb/a =0\n",
+    "    1 = Xa*(1 + Kb/a)    \n",
+    "    Xa = 1/(1 + Kb/a)\n",
+    "    Xb = Kb/a/(1 + Kb/a);    \n",
     "    ------------------------------\n",
-    "        или через соотношение Ka/b:\n",
-    "        { Xa + Xb = 1; Xa*Ka/b - Xb = 0; \n",
-    "\n",
-    "        { Xa = 1 - Xb; Xa*Ka/b = Xb; \n",
-    "        (1 - Xb)*Ka/b = Xb; Ka/b - Xb*Ka/b = Xb; Ka/b = Xb + Xb*Ka/b; Ka/b = Xb*(1 + Ka/b);\n",
-    "        = >\n",
-    "        Xb = Ka/b/(1 + Ka/b);\n",
-    "        Xa = 1 - Ka/b/(1 + Ka/b); \n",
-    "        ---------------------------------\n",
     "            Проверка\n",
-    "            Pa = 2\n",
-    "            Pb = 1\n",
-    "            Pa/Pb = Ka/b = 2/1 = 2\n",
+    "            Pa = 1\n",
+    "            Pb = 2\n",
+    "            Pp/Pa = Kb/a = 2/1 = 2\n",
     "\n",
     "            Xa + Xb = 1; Xa*2 = Xb; \n",
-    "            Xb = 2/(1 + 2);\n",
-    "            Xa = (1 + 2 - 2)/(1 + 2) = 1/3\n",
-    "\n",
+    "            Xb = 2/(1 + 2) = 2/3\n",
+    "            Xa = (1 + 2 - 2)/(1 + 2) = 1/3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#####Пересчет параметров спреда   \n",
     "    \n",
     "    Ps - суммарная цена спреда определяется в зависимости от выделенных на стратегию средств.\n",
@@ -127,22 +142,44 @@
     "    Qb = Xb*Ps / Pb    \n",
     "    \n",
     "\n",
-    "#####Пересчет параметров спреда Упрощенный вариант\n",
+    "#####Пересчет параметров спреда\n",
+    "    через известное соотвношение Pa/Pb\n",
     "\n",
-    "    Qat = K\n",
-    "    Qbt = K*Ka/b = K*Pa/Pb\n",
+    "На входе:    \n",
+    "\n",
+    "    S = Qa*Pa - Qb*Pb = 0\n",
+    "\n",
+    "    Kab = Ka/b = Pa/Pb\n",
     "    \n",
-    "    или \n",
-    "    Qat = K*Kb/a = K*Pb/Pa\n",
-    "    Qbt = K\n",
+    "    где Pa Pb средние на некотором интервале цены базового и котируемого портфеля\n",
+    "\n",
+    "    Xa = Qa*Pa / (Qa*Pa + Qb*Pb)\n",
+    "    Xb = Qb*Pb / (Qa*Pa + Qb*Pb)\n",
+    "\n",
+    "Известно:\n",
+    "    Qa = 1\n",
+    "    Qb = PA/PB = Kab\n",
+    "\n",
+    "    Xa = 1*Pa / (1*Pa + Kab*Pb)   = 1/2\n",
+    "    Xb = Kab*Pb / (1*Pa + Kab*Pb) = 1/2 \n",
     "    \n",
+    "    S = 1*Pa - Kab*Pb = 0    \n",
+    "\n",
+    "В общем виде \n",
     "    где \n",
     "    K - некоторый целый множитель лотов \n",
-    "\n",
+    "    \n",
+    "    Qat = K\n",
+    "    Qbt = K*Kab = K*Pa/Pb\n",
+    "    \n",
+    "    или \n",
+    "    Qat = K*Kba = K*Pb/Pa\n",
+    "    Qbt = K\n",
+    "    \n",
     "    тогда формула спреда на основе текущего отношения:\n",
     "    \n",
-    "    St =      K*Pat - Ka/b*K*Pbt\n",
-    "    St = Kb/a*K*Pat -      K*Pbt        "
+    "    St =      K*Pat - Kab*K*Pbt\n",
+    "    St = Kba*K*Pat -      K*Pbt        "
    ]
   },
   {
