--- a/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
+++ b/Research Нейтральная стратегия 1 Парный трейдинг.ipynb
@@ -96,7 +96,7 @@
     "    Xb = Qb*PB / PS\n",
     "    Xa = Qa*Pa / PS    \n",
     "\n",
-    "    Xb = (Qb*PB/Qa*Pa) / (Qb*PB/Qa*Pa + Na*Pa/Na*Pa)\n",
+    "    Xb = (Qb*PB/Qa*Pa) / (Qb*PB/Qa*Pa + Qa*Pa/Qa*Pa)\n",
     "    Xb = (Qb*PB/Qa*Pa) / (Qb*PB/Qa*Pa + 1)        \n",
     "\n",
     "    Xb = Kb/a/(1 + Kb/a);\n",
@@ -157,6 +157,7 @@
     "    Xb = Qb*Pb / (Qa*Pa + Qb*Pb)\n",
     "\n",
     "Известно:\n",
+    "    \n",
     "    Qa = 1\n",
     "    Qb = PA/PB = Kab\n",
     "\n",
@@ -166,12 +167,13 @@
     "    S = 1*Pa - Kab*Pb = 0    \n",
     "\n",
     "В общем виде \n",
-    "    где \n",
-    "    K - некоторый целый множитель лотов \n",
     "    \n",
     "    Qat = K\n",
     "    Qbt = K*Kab = K*Pa/Pb\n",
-    "    \n",
+    "\n",
+    "    где \n",
+    "    K - некоторый целый множитель лотов \n",
+    "\n",
     "    или \n",
     "    Qat = K*Kba = K*Pb/Pa\n",
     "    Qbt = K\n",
@@ -180,6 +182,51 @@
     "    \n",
     "    St =      K*Pat - Kab*K*Pbt\n",
     "    St = Kba*K*Pat -      K*Pbt        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Денежно нейтральный спред хорошо подходит для фьючерсов на евро и доллар.\n",
+    "\n",
+    "    Пример\n",
+    "    На входе\n",
+    "        Фьючерс на доллар Si       [S/R] = [Доллар США/Рубль]\n",
+    "        Фьючерс на евро   Eu       [Е/R] = [Евро/Рубль]\n",
+    "        Фьючерс на евро/доллар Ed  [Е/S] = [Евро/Доллар США]\n",
+    " \t \t\n",
+    "    Отношение Eu/Si ~> Ed\n",
+    "    \n",
+    "            St =  Qat*Pat -  Qbt*Pbt\n",
+    "            St =    1*Pat - Ka/b*Pbt\n",
+    "            St = Kb/a*Pat -    1*Pbt            \n",
+    "    Pat = Eu\n",
+    "    Pbt = Si\n",
+    "    Ked = Ed (~ Eu/Si)\n",
+    "    Ka/b = Ked = Ed\n",
+    "    Kb/a = 1/Ked = 1/Ed    \n",
+    "    \n",
+    "    Тогда спред евро - доллар:\n",
+    "        S = 1*Eu - Ka/b*Si                \n",
+    "        \n",
+    "        S = 1*Eu - Ked*Si                        \n",
+    "        S = 1*Eu - Ked*Si = [Е/R] - [Е/S]*[S/R] = [Е/R]- [Е/R]\n",
+    "\n",
+    "        S = (1/Ked)*Eu - 1*Si\n",
+    "        S = (1/Ked)*Eu - 1*Si = (1/[Е/S])*[Е/R] - [S/R] = [S/R]- [S/R]\n",
+    "\n",
+    "    Экспорт котировок для фьючерсов на евро и доллар:\n",
+    "\n",
+    "http://www.micex.ru/markets/futures/section/instruments/currency_futures/1263\n",
+    "    \n",
+    "http://www.finam.ru/analysis/profile636AE/?market=5\n",
+    "\n",
+    "http://www.finam.ru/analysis/profile61455/?market=14\n",
+    "\n",
+    "http://www.finam.ru/analysis/profile5E412/?market=14\n",
+    "\n",
+    "    Денежно нейтральный спред не всегда рыночно нейтральный.  "
    ]
   },
   {
